TEIID-401, TEIID-128, JBEDSP-648 XML-Relational connectors re-implemented around a streaming parser and the Teiid cache.